--- a/webext-logging/package.json
+++ b/webext-logging/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "A WebExtension for logging focus data",
   "scripts": {
-    "start": "parcel src/manifest.json",
+    "start": "run-p start:parcel start:webext",
+    "start:parcel": "parcel watch --no-hmr src/manifest.json",
+    "start:webext": "web-ext run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +23,11 @@
     "webextension-polyfill": "^0.6.0"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-web-extension": "^1.5.2",
     "typescript": "^3.7.4",
+    "web-ext": "^4.0.0",
     "web-ext-types": "^3.2.1"
   }
 }
