--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,10 @@
 {
-	"name": "focus-tools/webext-logging",
+	"name": "sleep-prompter",
 	"manifest_version": 2,
 	"version": "0.0.1",
 	"background": {
 		"scripts": [
-			"background/background-main.ts"
+			"main.ts"
 		]
 	}
 }
