--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,9 +2,14 @@
 	"name": "sleep-prompter",
 	"manifest_version": 2,
 	"version": "0.0.1",
-	"background": {
-		"scripts": [
-			"main.ts"
-		]
-	}
+	"content_scripts": [
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"js": [
+				"main.ts"
+			]
+		}
+	]
 }
