--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "sleep-prompter",
+	"name": "Sleep Prompter",
 	"manifest_version": 2,
 	"version": "0.0.1",
 	"content_scripts": [
@@ -15,14 +15,6 @@
 	"options_ui": {
 		"page": "options.html",
 		"browser_style": true
-	},
-	"background": {
-		"scripts": [
-			"background.js"
-		]
-	},
-	"browser_action": {
-		"default_title": "Favourite colour option"
 	},
 	"permissions": [
 		"storage"
