--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "webextension-polyfill": "^0.6.0"
   },
   "devDependencies": {
+    "kind-of": "^6.0.3",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-web-extension": "^1.5.2",
-    "typescript": "^3.7.4",
-    "web-ext": "^4.0.0",
+    "parcel-plugin-web-extension": "^1.6.1",
+    "typescript": "^3.8.3",
+    "web-ext": "^4.1.0",
     "web-ext-types": "^3.2.1"
   }
 }
